<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalculatorSimple</string>
    <string name="action_settings">Settings</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="left_operand">Left Operand</string>
    <string name="right_operand">Right Operand</string>
    <string name="sign_placeholder">#</string>
    <string name="solution">Answer: </string>
    <string name="finish">Finish</string>
    <string name="action_about">About</string>
    <string name="about_message">This app was created by David Tschida for EPICS APPS in September of 2013. More information can be found on his website at www.geekspk.wordpress.com. </string>
	<string name="close">Close</string>
	<string name="action_help">Help</string>
	<string name="help_message">Instructions:\n\t1. Fill in operands\n\t2. Choose operator\n\t3. Tap Finish.</string>
    <string name="created_by">Created By: David Tschida</string>

</resources>